# wasm-pvm

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  KNOWN_ISSUES.md  LEARNINGS.md  LICENSE  PLAN.md  README.md  REGALLOC_JOURNEY.md  RESOURCES.md  V1-COMPLETION-PLAN.md  gp-0.7.2.md  ir.md  opti.md  status.md  summary.md
.sisyphus/: ralph-loop.local.md
crates/wasm-pvm/: Cargo.toml
crates/wasm-pvm-cli/: Cargo.toml
crates/wasm-pvm-cli/src/: main.rs
crates/wasm-pvm/examples/: disasm.rs
crates/wasm-pvm/src/: abi.rs  error.rs  lib.rs  memory_layout.rs  spi.rs  test_harness.rs
crates/wasm-pvm/src/ir/: builder.rs  display.rs  instruction.rs  mod.rs  optimizer.rs
crates/wasm-pvm/src/llvm_backend/: alu.rs  calls.rs  control_flow.rs  emitter.rs  intrinsics.rs  lowering.rs  memory.rs  mod.rs  regalloc.rs  successors.rs
crates/wasm-pvm/src/llvm_frontend/: function_builder.rs  libcall_recognition.rs  mod.rs
crates/wasm-pvm/src/pvm/: AGENTS.md  blob.rs  instruction.rs  mod.rs  opcode.rs  peephole.rs
crates/wasm-pvm/src/translate/: AGENTS.md  adapter_merge.rs  codegen.rs  dead_function_elimination.rs  memory_layout.rs  mod.rs  stack.rs  stats.rs  wasm_module.rs
crates/wasm-pvm/tests/: as_nested_repro.rs  deep_stack_spill.rs  differential.rs  division_checks.rs  emitter_unit.rs  float_handling.rs  function_names.rs  harness_examples.rs  host_calls.rs  i64_globals.rs  import_map.rs  import_returns.rs  libcall_recognition.rs  local_tee.rs  local_zero_init.rs  loop_unreachable_end.rs  nested_if_result.rs  operator_coverage.rs  phi_many_values.rs  property_tests.rs  saturating_arith_lowering.rs
docs/: book.toml
examples-as/: README.md  asconfig.json  package-lock.json  package.json
examples-wat/: add-args.wat  add-spi.wat  add.jam.wat  add.wat  bit-ops.jam.wat  block-br-test.jam.wat  block-result.jam.wat  br-table.jam.wat  call-indirect.jam.wat  call.jam.wat  compare-test.jam.wat  computed-addr-test.jam.wat  div.jam.wat  entry-points.jam.wat  factorial.jam.wat  factorial.wat  fibonacci.jam.wat  fibonacci.wat  gcd.jam.wat  gcd.wat  i64-ops.jam.wat  is-prime.jam.wat  is-prime.wat  life-init-test.jam.wat  life-simple.jam.wat  loop-if-pattern.jam.wat  loop-memory-test.jam.wat  many-locals.jam.wat  memory-loop-test.jam.wat  nested-calls.jam.wat  nested-loop-lt-test.jam.wat  nested-loop-test.jam.wat  nested-memory-11locals.jam.wat  nested-memory-4locals.jam.wat  nested-memory-6locals.jam.wat  nth-prime.wat  recursive.jam.wat  rotate.jam.wat  (+5 more)
(+411 files in other folders)
