[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluffylabs/wasm-pvm"

[workspace.dependencies]
wasm-pvm = { path = "crates/wasm-pvm" }
wasm-encoder = "0.219"
wasmparser = "0.219"
wat = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
inkwell = { version = "0.8", features = ["llvm18-1"] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
