[package]
name = "wasm-pvm"
description = "WASM to PVM (PolkaVM) recompiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["test-harness"]
test-harness = ["dep:wat"]

[dependencies]
wasmparser.workspace = true
thiserror.workspace = true
wat = { workspace = true, optional = true }

[dev-dependencies]
wat.workspace = true

[lints]
workspace = true
