[package]
name = "wasm-pvm"
description = "WASM to PVM (PolkaVM) recompiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"

[features]
default = ["compiler", "test-harness"]
compiler = ["dep:inkwell", "dep:wasmparser", "dep:wasm-encoder"]
test-harness = ["compiler", "dep:wat"]

[dependencies]
wasm-encoder = { workspace = true, optional = true }
wasmparser = { workspace = true, optional = true }
thiserror.workspace = true
inkwell = { workspace = true, optional = true }
tracing.workspace = true
wat = { workspace = true, optional = true }

[dev-dependencies]
wat.workspace = true
proptest.workspace = true

[lints]
workspace = true
